# broch.github.io

./: .gitignore  CNAME  about.html  about.rst  archive.html  broch-io.cabal  broch-io.nix  broch.nix  config.toml  contact.html  contact.md  deploy.sh  go.mod  go.sum  index.html  index.xml  package.hugo.json  package.json  release.nix  shell.nix  site.hs  sitemap.xml  stack.yaml  tailwind.config.js
assets/css/: main.css  prism.css  zenburn.css
categories/: index.html  index.xml
content/posts/: _index.md  build-your-own-wai-framework.md  double-slits-elm.md  elm-have-i-been-pwned.md  (+6 more)
css/: default.css  main.min.2e3b5d77305136c6d89d84cdf83a240bc4461676bb07b0a0f3e2491c3517a6fd.css  main.min.9980b3c8e1db75033cdbf100b36011cee75b8267f11501d195b9485c01a36f16.css  main.min.b28b13e9255d17a9bfb82f578365c14bd825c78979c357c443646257d6cc09e5.css  main.min.cbea4dffd5bf7bf2c87de9504c4cac811c1f22ad854c538f0e08bbad25d60973.css  main.min.e5e3c9f3b6898f07b5fcdc75241740fe9565873494c47e1eae722ef2ff3c322b.css  syntax.css
drafts/: linux-install.md  oauth2-openid-connect-haskell.lhs  oauth2-openid-connect-haskell.md  using-random-number-generators.md
js/: prism.js
layouts/: index.html  rss.xml
posts/: build-your-own-wai-framework.md  double-slits-elm.md  index.html  index.xml  linux-install.md  oauth2-openid-connect-haskell.lhs  oauth2-openid-connect-haskell.md  using-random-number-generators.md  wai-app.hs
static/: CNAME  robots.txt
tags/: index.html  index.xml
templates/: analytics.html  archive.html  default.html  post-list-cards.html  post-list.html  post.html  tag.html
(+64 files in other folders)
