name:               broch-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , broch
                  , hakyll == 4.7.*
                  , containers
                  , data-default-generics
                  , filepath
                  , pandoc
                  , reroute
                  , text
                  , time
                  , wai-extra
                  , warp
  ghc-options:      -threaded
  default-language: Haskell2010
